Structure refactoring, added testing, requirements gathering and path configuration
